reate regeister backend with jwt and and jsonwebtoken

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,4 @@
 BD_URL=mongodb+srv://ehsan:ehsan12345@cluster0.mwe1utb.mongodb.net/ecommerce=true&w=majority;
+
+
+JWT_SECRET=owendf2i3uynldciohw2o323emc
