--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
+    "jwt-decode": "^3.1.2",
     "latest": "^0.2.0",
     "owl": "^0.0.6",
     "react": "^18.2.0",
