--- a/Backend/.env
+++ b/Backend/.env
@@ -1,4 +1,2 @@
-BD_URL=mongodb+srv://ehsan:ehsan12345@cluster0.mwe1utb.mongodb.net/ecommerce=true&w=majority;
-
-
+BD_URL=mongodb+srv://ehsan:ehsan12345@cluster0.mwe1utb.mongodb.net/ecomerce
 JWT_SECRET=owendf2i3uynldciohw2o323emc
