--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-password-strength-bar": "^0.4.1",
     "react-password-strometer": "^1.0.4",
     "react-redux": "^8.0.5",
     "react-router": "^6.10.0",
